Initial version - collision + camera + models

--- a/tech-demos/threejs/index.html
+++ b/tech-demos/threejs/index.html
@@ -10,6 +10,7 @@
   </head>
   <body></body>
     <div id="joystick"></div>
+    <div id="jump"></div>
     <script type="module" src="/src/logic.ts"></script>
     <script type="module" src="/src/client.ts"></script>
   </body>
